Fix skip button visibility

--- a/scss/_aziz.scss
+++ b/scss/_aziz.scss
@@ -29,25 +29,6 @@ $module: 'aziz';
     }
   }
 
-  &__skip {
-    @extend %center-horizontally;
-    display: none;
-    position: fixed;
-    bottom: $gutter-lg;
-    visibility: hidden;
-    opacity: 0;
-    transition: 1s opacity $ease-out-quint, 1s visibility $ease-out-quint;
-
-    @media screen and (min-width: $screen-sm-min) {
-      display: block;
-    }
-
-    &--visible {
-      opacity: 1;
-      visibility: visible;
-    }
-  }
-
   &__heading {
     span {
       display: none;
@@ -68,17 +49,15 @@ $module: 'aziz';
   }
 
   &__button {
-    @extend %center-horizontally;
     display: block;
     position: relative;
     width: 250px;
     height: 50px;
     margin: 12.5px 0 0;
+    text-align: center;
     border-radius: 999px;
     background: url(../img/playlist-button.png) center center;
     background-size: cover;
-    opacity: 0;
-    visibility: hidden;
     image-rendering: -webkit-optimize-contrast;
     image-rendering: crisp-edges;
     cursor: pointer;
@@ -106,6 +85,47 @@ $module: 'aziz';
       width: 100%;
       display: inline-block;
       cursor: pointer;
+    }
+  }
+
+  &__start {
+    @extend %center-horizontally;
+    opacity: 0;
+    visibility: hidden;
+
+    @media screen and (min-width: $screen-sm-min) {
+      margin: $gutter-sm 0 0;
+    }
+
+    @media screen and (min-width: $screen-xl-min) {
+      margin: $gutter-md 0 0;
+    }
+
+    &--visible {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+
+  &__skip {
+    $skip-scale: 1;
+    @extend %center-horizontally;
+    display: none;
+    position: fixed !important;
+    bottom: $gutter-lg + $gutter-xxs !important;
+    width: 250px * $skip-scale;
+    height: 50px * $skip-scale;
+    margin: 0;
+    visibility: hidden;
+    opacity: 0;
+    transition: 1s opacity $ease-out-quint, 1s visibility $ease-out-quint, 0.5s transform $ease-out-quint;
+
+    .icon {
+      transform: scale($skip-scale);
+    }
+
+    @media screen and (min-width: $screen-sm-min) {
+      display: block;
     }
 
     &--visible {
