--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,6 +18,7 @@ $black:               #000;
 $light-grey:          #EEE;
 $grey:                #AAA;
 $dark-grey:           #222;
+$red:                 #cd201f;
 
 // Type
 $font-family-sans-serif:    "DropDeadGorgeous", Arial, sans-serif;
